borgs sound change

--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -138,6 +138,9 @@
   - type: FootstepModifier
     footstepSoundCollection:
       collection: FootstepBorg
+      params:
+        variation: 0.1
+        volume: -13
   - type: Construction
     graph: Cyborg
     containers:
