--- a/Resources/Prototypes/Voice/speech_sounds.yml
+++ b/Resources/Prototypes/Voice/speech_sounds.yml
@@ -55,6 +55,23 @@
 - type: speechSounds
   id: Borg
   saySound:
+    path: /Audio/Voice/Talk/pai.ogg
+  askSound:
+    path: /Audio/Voice/Talk/pai_ask.ogg
+  exclaimSound:
+    path: /Audio/Voice/Talk/pai_exclaim.ogg
+
+# WD edit - эти звуки слишком машинные и хладнокровные. Милые звуки пИИ намного лучше
+#  saySound:
+#    path: /Audio/Voice/Talk/Silicon/borg.ogg
+#  askSound:
+#    path: /Audio/Voice/Talk/Silicon/borg_ask.ogg
+#  exclaimSound:
+#    path: /Audio/Voice/Talk/Silicon/borg_exclaim.ogg
+
+- type: speechSounds
+  id: BorgUpgraded
+  saySound:
     path: /Audio/Voice/Talk/Silicon/borg.ogg
   askSound:
     path: /Audio/Voice/Talk/Silicon/borg_ask.ogg
