--- a/Resources/Prototypes/Catalog/ReagentDispensers/chemical.yml
+++ b/Resources/Prototypes/Catalog/ReagentDispensers/chemical.yml
@@ -1,26 +1,26 @@
 - type: reagentDispenserInventory
   id: ChemDispenserStandardInventory
   inventory:
-  - JugAluminium
-  - JugCarbon
-  - JugChlorine
-  - JugCopper
-  - JugEthanol
-  - JugFluorine
-  - JugSugar
-  - JugHydrogen
-  - JugIodine
-  - JugIron
-  - JugLithium
-  - JugMercury
-  - JugNitrogen
-  - JugOxygen
-  - JugPhosphorus
-  - JugPotassium
-  - JugRadium
-  - JugSilicon
-  - JugSodium
-  - JugSulfur
+  - ChemicalCartridgeAluminium
+  - ChemicalCartridgeCarbon
+  - ChemicalCartridgeChlorine
+  - ChemicalCartridgeCopper
+  - ChemicalCartridgeEthanol
+  - ChemicalCartridgeFluorine
+  - ChemicalCartridgeSugar
+  - ChemicalCartridgeHydrogen
+  - ChemicalCartridgeIodine
+  - ChemicalCartridgeIron
+  - ChemicalCartridgeLithium
+  - ChemicalCartridgeMercury
+  - ChemicalCartridgeNitrogen
+  - ChemicalCartridgeOxygen
+  - ChemicalCartridgePhosphorus
+  - ChemicalCartridgePotassium
+  - ChemicalCartridgeRadium
+  - ChemicalCartridgeSilicon
+  - ChemicalCartridgeSodium
+  - ChemicalCartridgeSulfur
 
 - type: reagentDispenserInventory
   id: EmptyInventory
