--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/chemvend.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/chemvend.yml
@@ -1,27 +1,28 @@
 - type: vendingMachineInventory
   id: ChemVendInventory
   startingInventory:
-    Jug: 2
-    JugAluminium: 1
-    JugCarbon: 1
-    JugChlorine: 1
-    JugCopper: 1
-    JugEthanol: 1
-    JugFluorine: 1
-    JugHydrogen: 1
-    JugIodine: 1
-    JugIron: 1
-    JugLithium: 1
-    JugMercury: 1
-    JugNitrogen: 1
-    JugOxygen: 1
-    JugPhosphorus: 1
-    JugPotassium: 1
-    JugRadium: 1
-    JugSilicon: 1
-    JugSodium: 1
-    JugSugar: 1
-    JugSulfur: 1
+    Jug: 8
+    ChemicalCartridge: 2
+    ChemicalCartridgeAluminium: 1
+    ChemicalCartridgeCarbon: 1
+    ChemicalCartridgeChlorine: 1
+    ChemicalCartridgeCopper: 1
+    ChemicalCartridgeEthanol: 1
+    ChemicalCartridgeFluorine: 1
+    ChemicalCartridgeHydrogen: 1
+    ChemicalCartridgeIodine: 1
+    ChemicalCartridgeIron: 1
+    ChemicalCartridgeLithium: 1
+    ChemicalCartridgeMercury: 1
+    ChemicalCartridgeNitrogen: 1
+    ChemicalCartridgeOxygen: 1
+    ChemicalCartridgePhosphorus: 1
+    ChemicalCartridgePotassium: 1
+    ChemicalCartridgeRadium: 1
+    ChemicalCartridgeSilicon: 1
+    ChemicalCartridgeSodium: 1
+    ChemicalCartridgeSugar: 1
+    ChemicalCartridgeSulfur: 1
   emaggedInventory:
     ToxinChemistryBottle: 1
 
