--- a/Resources/Prototypes/_White/Entities/Cult/Items/hands.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/hands.yml
@@ -14,6 +14,7 @@
     deleteOnDrop: true
   - type: CultItem
     canPickUp: false
+  - type: ContextMenuInteractionBlocker
 
 - type: entity
   parent: BaseCultHand
