--- a/Resources/Maps/White/DryDock.yml
+++ b/Resources/Maps/White/DryDock.yml
@@ -82859,7 +82859,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -46.25965,14.607529
       parent: 2
-- proto: OmntnsHammer
+- proto: JudgeHammer
   entities:
   - uid: 11691
     components:
