--- a/Resources/Prototypes/Roles/Jobs/Command/head_of_personnel.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/head_of_personnel.yml
@@ -16,6 +16,8 @@
     - !type:DepartmentTimeRequirement
       department: Command
       time: 3600
+    - !type:AgeRequirement
+      requiredAge: 20
   weight: 20
   icon: "JobIconHeadOfPersonnel"
   requireAdminNotify: true
