--- a/Resources/Prototypes/Roles/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/captain.yml
@@ -16,6 +16,8 @@
     - !type:DepartmentTimeRequirement
       department: Command
       time: 18000 # 15 3
+    - !type:AgeRequirement
+      requiredAge: 20
   weight: 20
   icon: "JobIconCaptain"
   requireAdminNotify: true
