--- a/Resources/Prototypes/Roles/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Medical/chief_medical_officer.yml
@@ -11,6 +11,8 @@
       time: 18000
     - !type:OverallPlaytimeRequirement
       time: 108000
+    - !type:AgeRequirement
+      requiredAge: 20
   weight: 10
   icon: "JobIconChiefMedicalOfficer"
   arrivalNotificationPrototype: ChiefMedicalOfficerArrivalNotification
