--- a/Resources/Prototypes/Roles/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/research_director.yml
@@ -9,6 +9,8 @@
       time: 18000
     - !type:OverallPlaytimeRequirement
       time: 108000
+    - !type:AgeRequirement
+      requiredAge: 20
   weight: 10
   icon: "JobIconResearchDirector"
   requireAdminNotify: true
