--- a/Resources/Prototypes/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -285,7 +285,7 @@
     - state: icon-light-replacer
   - type: ItemBorgModule
     items:
-    - LightReplacer
+    - LightReplacerBigger # WD
     - Crowbar
     - Screwdriver
 
@@ -317,8 +317,8 @@
     items:
     - AdvMopItem
     - HoloprojectorBorg
-    - SprayBottleSpaceCleaner
-    - Dropper
+    - SprayBottleSpaceCleanerSelfRecharging # WD
+    - TrashBagAdvanced # WD
 
 # medical modules
 - type: entity
