- fix: Wizard shield interact on use.

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -697,6 +697,7 @@
             - PowerCell
             - PowerCellSmall
   - type: EnergyDomeGenerator
+    canInteractOnUse: false
     damageEnergyDraw: 15
     domePrototype: EnergyDomeSmallPink
   - type: ClothingSpeedModifier
