--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -697,7 +697,7 @@
             - PowerCell
             - PowerCellSmall
   - type: EnergyDomeGenerator
-    canInteractOnUse: false
+    canInteractUse: false
     damageEnergyDraw: 15
     domePrototype: EnergyDomeSmallPink
   - type: ClothingSpeedModifier
