--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -276,3 +276,4 @@ OmntnsHammer: JudgeHammer
 # 2024-08-07 WD
 BorgModuleDiagnosis: null
 BorgModuleRCD: BorgModuleConstruction
+BorgModuleFireExtinguisher: null
