- add: Add stuff.

--- a/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
@@ -14,6 +14,11 @@
       time: 108000
     - !type:AgeRequirement
       requiredAge: 20
+    - !type:SpeciesRequirement
+      species:
+      - Human
+      - Dwarf
+      - Felinid
   weight: 10
   icon: "JobIconQuarterMaster"
   arrivalNotificationPrototype: QuartermasterArrivalNotification
