--- a/Resources/Prototypes/Roles/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/captain.yml
@@ -18,6 +18,10 @@
       time: 18000 # 15 3
     - !type:AgeRequirement
       requiredAge: 20
+    - !type:SpeciesRequirement
+      species:
+      - Human
+      - Felinid
   weight: 20
   icon: "JobIconCaptain"
   requireAdminNotify: true
