--- a/Resources/Prototypes/Roles/Jobs/Command/head_of_personnel.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/head_of_personnel.yml
@@ -18,6 +18,10 @@
       time: 3600
     - !type:AgeRequirement
       requiredAge: 20
+    - !type:SpeciesRequirement
+      species:
+      - Human
+      - Felinid
   weight: 20
   icon: "JobIconHeadOfPersonnel"
   requireAdminNotify: true
