--- a/Resources/Prototypes/Roles/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Medical/chief_medical_officer.yml
@@ -13,6 +13,10 @@
       time: 108000
     - !type:AgeRequirement
       requiredAge: 20
+    - !type:SpeciesRequirement
+      species:
+      - Human
+      - Felinid
   weight: 10
   icon: "JobIconChiefMedicalOfficer"
   arrivalNotificationPrototype: ChiefMedicalOfficerArrivalNotification
