--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -14,6 +14,9 @@
       time: 108000
     - !type:AgeRequirement
       requiredAge: 20
+    - !type:SpeciesRequirement
+      species:
+      - Human
   weight: 10
   icon: "JobIconHeadOfSecurity"
   requireAdminNotify: true
