--- a/Resources/Prototypes/_White/Wizard/spellbook_catalog.yml
+++ b/Resources/Prototypes/_White/Wizard/spellbook_catalog.yml
@@ -321,3 +321,19 @@
   conditions:
   - !type:ListingLimitedStockCondition
     stock: 1
+
+- type: listing
+  id: SpellBookRodForm
+  name: spellbook-rod-name
+  description: spellbook-rod-desc
+  productEntity: ScrollRodForm
+  icon:
+    sprite: Objects/Magic/magicactions.rsi
+    state: rod_form
+  cost:
+    SpellPoint: 4
+  categories:
+  - UtilitySpells
+  conditions:
+  - !type:ListingLimitedStockCondition
+    stock: 1
