Добавил параметр группы там, где его нет

--- a/Resources/Prototypes/Reagents/fun.yml
+++ b/Resources/Prototypes/Reagents/fun.yml
@@ -30,6 +30,7 @@
 - type: reagent
   id: Fiber
   name: reagent-name-fiber
+  group: Special # WD
   desc: reagent-desc-fiber
   physicalDesc: reagent-physical-desc-fibrous
   flavor: fiber
@@ -139,6 +140,7 @@
 - type: reagent
   id: GroundBee
   name: reagent-name-ground-bee
+  group: Special # WD
   desc: reagent-desc-ground-bee
   physicalDesc: reagent-physical-desc-bee-guts
   flavor: bee
@@ -147,6 +149,7 @@
 - type: reagent
   id: Saxoite
   name: reagent-name-saxoite
+  group: Toxins # WD
   desc: reagent-desc-saxoite
   physicalDesc: reagent-physical-desc-ground-brass
   flavor: sax
