--- a/Resources/Prototypes/_White/Wizard/spellbook_catalog.yml
+++ b/Resources/Prototypes/_White/Wizard/spellbook_catalog.yml
@@ -337,3 +337,19 @@
   conditions:
   - !type:ListingLimitedStockCondition
     stock: 1
+
+- type: listing
+  id: SpellBookBlind
+  name: spellbook-blind-name
+  description: spellbook-blind-desc
+  productEntity: ScrollBlind
+  icon:
+    sprite: Objects/Magic/magicactions.rsi
+    state: blind
+  cost:
+    SpellPoint: 1
+  categories:
+  - UtilitySpells
+  conditions:
+  - !type:ListingLimitedStockCondition
+    stock: 1
