--- a/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/dressers.yml
@@ -19,6 +19,10 @@
       - id: ClothingMaskGasCaptain
       - id: ClothingUniformJumpskirtCaptain
       - id: ClothingOuterWinterCap
+      - id: ClothingUnderwearBottomBoxersCap # WD
+      - id: ClothingUnderwearBottomPantiesCap # WD
+      - id: ClothingUnderwearTopBraCap # WD
+
 
 - type: entity
   id: DresserChiefEngineerFilled
@@ -36,6 +40,9 @@
       - id: ClothingHeadsetAltEngineering
       - id: ClothingHeadHatHardhatWhite
       - id: ClothingHandsGlovesColorYellow
+      - id: ClothingUnderwearBottomBoxersCE # WD
+      - id: ClothingUnderwearBottomPantiesCE # WD
+      - id: ClothingUnderwearTopBraCE # WD
 
 - type: entity
   id: DresserChiefMedicalOfficerFilled
@@ -56,6 +63,10 @@
       - id: ClothingHeadsetAltMedical
       - id: ClothingMaskSterile
       - id: ClothingEyesEyepatchHudMedical
+      - id: ClothingUnderwearBottomBoxersCMO # WD
+      - id: ClothingUnderwearBottomPantiesCMO # WD
+      - id: ClothingUnderwearTopBraCMO # WD
+
 - type: entity
   id: DresserHeadOfPersonnelFilled
   parent: Dresser
@@ -73,6 +84,9 @@
       - id: ClothingShoesLeather
       - id: ClothingUniformJumpsuitHoP
       - id: ClothingUniformJumpskirtHoP
+      - id: ClothingUnderwearBottomBoxersHOP # WD
+      - id: ClothingUnderwearBottomPantiesHOP # WD
+      - id: ClothingUnderwearTopBraHOP # WD
 
 - type: entity
   id: DresserHeadOfSecurityFilled
@@ -95,6 +109,9 @@
       - id: ClothingHeadsetAltSecurityCommand
       - id: ClothingMaskGasSwat
       - id: ClothingOuterCoatHoSTrench
+      - id: ClothingUnderwearBottomBoxersHOS # WD
+      - id: ClothingUnderwearBottomPantiesHOS # WD
+      - id: ClothingUnderwearTopBraHOS # WD
 
 - type: entity
   id: DresserQuarterMasterFilled
@@ -116,6 +133,9 @@
       - id: ClothingUniformJumpsuitQM
       - id: ClothingUniformJumpskirtQM
       - id: ClothingHeadHatQMsoft
+      - id: ClothingUnderwearBottomBoxersQM # WD
+      - id: ClothingUnderwearBottomPantiesQM # WD
+      - id: ClothingUnderwearTopBraQM # WD
 
 - type: entity
   id: DresserResearchDirectorFilled
@@ -133,6 +153,9 @@
       - id: ClothingUniformJumpsuitResearchDirector
       - id: ClothingOuterWinterRD
       - id: ClothingOuterCoatRD
+      - id: ClothingUnderwearBottomBoxersRD # WD
+      - id: ClothingUnderwearBottomPantiesRD # WD
+      - id: ClothingUnderwearTopBraRD # WD
 
 - type: entity
   id: DresserWardenFilled
